# rgb-matrix

./: .gitignore  CMakeLists.txt  Makefile  README.md  ant.cpp  ant.h  ants.cc  ants.cpp  color.cpp  color.h  game.h  keyboardInput.cpp  keyboardInput.h  ledDraw.cpp  ledDraw.h  life.cc  life.cpp  life.h  main.cpp
ants/: ant.cpp  ant.h  ants.cpp  ants.h
clock/: clock.cpp  clock.h
life/: life.cpp  life.h
none/: none.cpp  none.h
snake/: snake.cpp  snake.h
